crates/unison-cli/tests/snapshots/new_snapshots__lua-web-only-tree.snap
---
source: crates/unison-cli/tests/new_snapshots.rs
expression: file_tree(&root)
---
.gitignore
Cargo.toml
README.md
build.rs
platform/web/Trunk.toml
platform/web/index.html
project/assets/scripts/main.lua
project/lib.rs
unison.toml
