crates/unison-cli/tests/snapshots/new_snapshots__ts-web-tree.snap
---
source: crates/unison-cli/tests/new_snapshots.rs
assertion_line: 51
expression: file_tree(&root)
---
.cargo/config.toml
.gitignore
Cargo.toml
README.md
build.rs
package.json
platform/web/Trunk.toml
platform/web/index.html
project/assets/fonts/DejaVuSans-Bold.ttf
project/assets/textures/logo.png
project/lib.rs
project/scripts-src/main.ts
project/scripts-src/tsconfig.json
project/scripts-src/types/unison2d/color.d.ts
project/scripts-src/types/unison2d/debug.d.ts
project/scripts-src/types/unison2d/events.d.ts
project/scripts-src/types/unison2d/game.d.ts
project/scripts-src/types/unison2d/index.d.ts
project/scripts-src/types/unison2d/input.d.ts
project/scripts-src/types/unison2d/lua.d.ts
project/scripts-src/types/unison2d/math-extensions.d.ts
project/scripts-src/types/unison2d/package.json
project/scripts-src/types/unison2d/rng.d.ts
project/scripts-src/types/unison2d/scene.d.ts
project/scripts-src/types/unison2d/ui.d.ts
project/scripts-src/types/unison2d/unison.d.ts
project/scripts-src/types/unison2d/world.d.ts
unison.toml
